--- a/client/src/components/Pages/TourLanding/TourLanding.module.css
+++ b/client/src/components/Pages/TourLanding/TourLanding.module.css
@@ -1,5 +1,5 @@
 .tourLanding {
-  max-width: 100vw;
+  max-width: 135rem;
 }
 
 /* *********************TourLanding HERO*************************** */
