batch bug fixes

--- a/server/views/bookingConfirm.pug
+++ b/server/views/bookingConfirm.pug
@@ -3,7 +3,7 @@ extends baseEmail
 block content 
   p Dear #{firstName},
 
-    p We are thrilled to inform you that you tour booking has been successfully confirmed! 🎉
+    p We are thrilled to inform you that your tour booking has been successfully confirmed!
     
     p BOOKING DETAILS :
 
