--- a/client/src/components/Pages/Dashboard/AdminPages/UsersAdmin/UsersAdmin.module.css
+++ b/client/src/components/Pages/Dashboard/AdminPages/UsersAdmin/UsersAdmin.module.css
@@ -1,13 +1,18 @@
 .stat_ctn {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 3.2rem;
+  gap: 1.6rem;
   padding: 1.6rem;
   width: 100%;
 }
 
-.wrapper {
-  /* max-width: 135rem; */
+.section_head {
+  color: #434a54;
+  font-size: 1.8rem;
+  letter-spacing: 0.8px;
+  margin-bottom: 4.8rem;
+  margin-top: 3.2rem;
+  margin-left: 1.6rem;
 }
 
 .newUser_ctn {
